hphp/hack/test/typecheck/reactive/test_mutable_nonreactive.php.exp
File "test_mutable_nonreactive.php", line 8, characters 33-34:
The method foo has a mutable parameter (or mutable this), so it must be marked reactive with <<__Rx>>. (NastCheck[3053])
