hphp/hack/test/typecheck/reactive/test_mutable_nonreactive.php
<?hh // strict

class Test {

  public function __construct(public int $val) {}
}

function foo(<<__Mutable>>Test $x, Test $y): void {}
